# mailduck

./: Cargo.toml  LICENSE  README.md
src/: main.rs
src/smtp/: error.rs  mod.rs
src/smtp/commands/: command.rs  hello.rs  mail_from.rs  mod.rs
