[package]
name = "mailduck"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
log = "0.4.0"
env_logger = "0.9.0"
color-eyre = "0.6.0"
async-trait = "0.1.52"
regex = "1.5.4"
lazy_static = "1.4.0"
